[project]
name = "smile"
version = "0.1.0"
description = "微笑助手 — 从 OA 系统导出财务数据"
requires-python = ">=3.12"
dependencies = [
    "deepagents",
    "python-dotenv",
    "langchain",
    "langgraph",
    "langchain-openai",
    "pyyaml",
    "langchain-deepseek>=1.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/smile"]

[tool.pytest.ini_options]
testpaths = ["tests"]
